RhaptosContent-0.60.2
  - update google analytics domain code

RhaptosContent-0.60.1
  - fix a typo in previous version

RhaptosContent-0.60
  - handle authors w/o a member account

RhaptosContent-0.59
  - implement separate counturl for twitter
  - factor mathjax into its own package

RhaptosContent-0.58
  - caching

RhaptosContent-0.57
  - twitbook buttons

RhaptosContent-0.56
  - Sprint-2011 bugfixes

RhaptosContent-0.55
  - MathJax. 'nuff said

RhaptosContent-0.54
  - sword import support

RhaptosContent-0.52
  - changes to download menu for epub

RhaptosContent-0.47
  - Google Analytics addition for file downloads

RhaptosContent-0.46
  - generic setup factor. Rhaptos 2.0 release

RhaptosContent-0.45
  - siyavula-phase-3 (11 Jan 2010)

RhaptosContent-0.44
  - remove adhoc branding (05 Jan 2010)

RhaptosContent-0.43
  - lwb-hot-fixes (03 Dec 2009)
    - #9812: create branding banner bar and set branding cookie, server side

RhaptosContent-0.42
  - adding donate button (25 Nov 2009)

RhaptosContent-0.41
  - fix-pdfs (Nov. 11, 2009)
    - #9840: no longer access or move cached PDF and mulitmedia zip files attached directly to Collection objects

RhaptosContent-0.40
  - light-weight-branding (30 Oct 2009)
    - Viewing a lens page now sets (or updates) a cookie with a unique list of lenses visited.
      Then, content_render.xsl has javascript that detects if this module is in one of the lenses
      in the cookie (by navigating the DOM tree) and displays an ugly banner
    - Banner colors, title, and whether a logo exists are stored in the cookie and
      (aside from the logo) rendered.
    - branding bar message needs to change based on lens category: {Endorsement, Affiliation}.
    - branding logo now happens for collections and modules.
    - Adding styling to CNX look and Rhaptos look for branding bar and
      logo. Removed unused class from JS and converted another class into a more appropriate ID