@@ -1,3 +1,6 @@
+RhaptosContent-0.61
+  - Google 1+ button
+
 RhaptosContent-0.60.2
   - update google analytics domain code
 
